# HttpServer

./: CMakeLists.txt  README.md  TODO
include/webInclude/: webIO.hpp
src/: main.cpp
src/HttpRequest/: HttpRequest.cpp  HttpRequest.hpp
src/HttpResponce/: HttpResponce.cpp  HttpResponce.hpp
src/HttpServer/: HttpServer.cpp  HttpServer.hpp
src/Socket/: socket.cpp  socket.hpp
src/codeHandler/: codeHandler.cpp  codeHandler.hpp
